# financial-report-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  benchmark.json  benchmark_prompts.txt  cleanup_main_run.py  config.py  config.yaml  extractor.txt  main.py  pyproject.toml  requirements.txt  run_benchmark.py  run_simple_agent_baseline.py  summarize_token_usage.py  summarize_usage.py  test.txt
examples/demo/: deep_research_agent.sh
financial_report_agent/agents/: planner.py  searcher.py  writer.py
financial_report_agent/config/: prompts.py
financial_report_agent/memory/: long_term.py
financial_report_agent/pipelines/: workflow.py
financial_report_agent/test/: test_material.py
financial_report_agent/tools/: material_tools.py  material_tools_copy.py  planner_tools.py  searcher_tools.py  writer_tools.py
src/: __init__.py
src/agents/: deep_research_agent.py  planner.py  searcher.py  verifier.py  writer.py
src/evaluation/: build_benchmark.py  eval_content.py  eval_evidence.py  eval_structure.py  evaluation_metrics.py  extract_evidence.py  parse_verifier_verdict.py  segment_scorer.py
src/memory/: evidence_registry.py  feedback_models.py  long_term.py  short_term.py  (+3 more)
tests/: clean_report_markdown_headings.py  count_tool.py  export_pdf_from_artifacts.py  summarize_content_debug_results.py  summarize_eval_results.py  test_akshare.py  test_classifier.py  test_executor.py  test_graphictools.py  test_material.py  test_multi_types_verification.py  test_multisourceverification.py  test_navigator.py  test_outline_refine_flow.py  test_pdf.py  test_replan.py
(+350 files in other folders)
